add palestras confirmadas

--- a/theme/templates/includes/schedule.html
+++ b/theme/templates/includes/schedule.html
@@ -111,6 +111,7 @@
                 <th scope="col">Título</th>
                 <th scope="col">Por</th>
                 <th scope="col">Local</th>
+                <th scope="col">Status</th>
               </tr>
               </thead>
               <tbody>
@@ -118,127 +119,164 @@
 
               <tr>
                 <th scope="row">1</th>
-                <td> Dia 3 ou 4</td>
-                <td> - - - </td>
-                <td> Utilizando o Google Colaboratory e ensinando redes Neurais com TensorFlow e Keras   </td>
-                <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
-                  Rousseau Lobo Braga  </a>
+                <td> Dia 3</td>
+                <td> manhã </td>
+                <td> <b>Redes neuronais do zero com python  </b> </td>
+                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
+                  Clayton Guimarães C. Santos  </a>
                 </td>
                 <td>Auditório</td>
+                <td class="text-success "><b>Confirmada</b></td>
               </tr>
+
 
               <tr>
                 <th scope="row">2</th>
-                <td> Dia 3 ou 4</td>
-                <td> - - - </td>
-                <td> De código para código: python, pandas e a inferência estatística no Direito   </td>
-                <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
-                  Edson Pinto   </a>
+                <td> Dia 3</td>
+                <td> tarde </td>
+                <td> <b> Classe não é tabela: como está o paradigma da Orientação à Objetos </b> </td>
+                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
+                  José Avani das Chagas Júnior </a>
                 </td>
                 <td>Auditório</td>
+                <td class="text-success "><b>Confirmada</b></td>
               </tr>
+
 
               <tr>
                 <th scope="row">3</th>
-                <td> Dia 3 ou 4</td>
-                <td> - - - </td>
-                <td> Sinapses - Inteligência artificial aplicada no TJRO   </td>
-                <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
-                  Cleiton Augusto e Felipe Colen   </a>
+                <td> Dia 4</td>
+                <td> tarde </td>
+                <td> <b>Data scientist: The sexiest job that you've likely never heard of  </b> </td>
+                <td> <a target="_blank" href="https://www.rondonia.fiocruz.br/">
+                  Moreno MS Rodrigues  </a>
                 </td>
                 <td>Auditório</td>
+                <td class="text-success "><b>Confirmada</b></td>
               </tr>
+
 
               <tr>
                 <th scope="row">4</th>
                 <td> Dia 3 ou 4</td>
                 <td> - - - </td>
-                <td> Python na Programação Competitiva   </td>
-                <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
-                  Sylvio Tavares  </a>
+                <td> Utilizando o Google Colaboratory e ensinando redes Neurais com TensorFlow e Keras   </td>
+                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
+                  Rousseau Lobo Braga  </a>
                 </td>
                 <td>Auditório</td>
+                <td>À confirmar</td>
               </tr>
-
 
               <tr>
                 <th scope="row">5</th>
                 <td> Dia 3 ou 4</td>
                 <td> - - - </td>
-                <td> Data scientist: The sexiest job that you've likely never heard of   </td>
-                <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
-                  Moreno de Souza Rodrigues  </a>
+                <td> De código para código: python, pandas e a inferência estatística no Direito   </td>
+                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
+                  Edson Pinto   </a>
                 </td>
                 <td>Auditório</td>
+                <td>À confirmar</td>
               </tr>
 
-              
               <tr>
                 <th scope="row">6</th>
                 <td> Dia 3 ou 4</td>
                 <td> - - - </td>
-                <td> Filósofo e Pythonista: Como a programação foi capaz de revolucionar a minha forma de trabalhar   </td>
-                <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
-                  Vicente Marçal   </a>
+                <td> Sinapses - Inteligência artificial aplicada no TJRO   </td>
+                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
+                  Cleiton Augusto e Felipe Colen   </a>
                 </td>
                 <td>Auditório</td>
+                <td>À confirmar</td>
               </tr>
-
 
               <tr>
                 <th scope="row">7</th>
                 <td> Dia 3 ou 4</td>
                 <td> - - - </td>
-                <td> Python para todos os dispositivos!   </td>
-                <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
-                  Miguel Zamberlan  </a>
+                <td> Python na Programação Competitiva   </td>
+                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
+                  Sylvio Tavares  </a>
                 </td>
                 <td>Auditório</td>
+                <td>À confirmar</td>
               </tr>
+
 
               <tr>
                 <th scope="row">8</th>
                 <td> Dia 3 ou 4</td>
                 <td> - - - </td>
-                <td> Python + Criptografia: Guia prático para iniciar sua aplicação   </td>
-                <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
-                  Ewerton R. Andrade </a>
+                <td> Filósofo e Pythonista: Como a programação foi capaz de revolucionar a minha forma de trabalhar   </td>
+                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
+                  Vicente Marçal   </a>
                 </td>
                 <td>Auditório</td>
+                <td>À confirmar</td>
               </tr>
+
 
               <tr>
                 <th scope="row">9</th>
                 <td> Dia 3 ou 4</td>
                 <td> - - - </td>
-                <td> Python e a Bolsa de Valores   </td>
-                <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
-                  Claudius S Ramos   </a>
+                <td> Python para todos os dispositivos!   </td>
+                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
+                  Miguel Zamberlan  </a>
                 </td>
                 <td>Auditório</td>
+                <td>À confirmar</td>
               </tr>
 
               <tr>
                 <th scope="row">10</th>
                 <td> Dia 3 ou 4</td>
                 <td> - - - </td>
-                <td> [Tutorial] Conceituando e criando uma RESTful API com Django e Django Rest Framework   </td>
-                <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
-                  Vicente Marçal  </a>
+                <td> Python + Criptografia: Guia prático para iniciar sua aplicação   </td>
+                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
+                  Ewerton R. Andrade </a>
                 </td>
                 <td>Auditório</td>
+                <td>À confirmar</td>
               </tr>
-             
 
               <tr>
                 <th scope="row">11</th>
                 <td> Dia 3 ou 4</td>
                 <td> - - - </td>
+                <td> Python e a Bolsa de Valores   </td>
+                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
+                  Claudius S Ramos   </a>
+                </td>
+                <td>Auditório</td>
+                <td>À confirmar</td>
+              </tr>
+
+              <tr>
+                <th scope="row">12</th>
+                <td> Dia 3 ou 4</td>
+                <td> - - - </td>
+                <td> [Tutorial] Conceituando e criando uma RESTful API com Django e Django Rest Framework   </td>
+                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
+                  Vicente Marçal  </a>
+                </td>
+                <td>Auditório</td>
+                <td>À confirmar</td>
+              </tr>
+             
+
+              <tr>
+                <th scope="row">13</th>
+                <td> Dia 3 ou 4</td>
+                <td> - - - </td>
                 <td>Criando um chatbot com Python e Dialogflow (Google)</td>
-                <td> <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
+                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
                   Felipe Colen  </a>
                 </td>
                 <td>Auditório</td>
+                <td>À confirmar</td>
               </tr>
 
 
