add palestras confirmadas

--- a/theme/templates/includes/schedule.html
+++ b/theme/templates/includes/schedule.html
@@ -145,6 +145,19 @@
 
               <tr>
                 <th scope="row">3</th>
+                <td> Dia 3</td>
+                <td> tarde </td>
+                <td> Python na Programação Competitiva   </td>
+                <td> <a target="_blank" href="www.sylviot.com">
+                  Sylvio Tavares  </a>
+                </td>
+                <td>Auditório</td>
+                <td class="text-success "><b>Confirmada</b></td>
+              </tr>
+
+
+              <tr>
+                <th scope="row">4</th>
                 <td> Dia 4</td>
                 <td> tarde </td>
                 <td> <b>Data scientist: The sexiest job that you've likely never heard of  </b> </td>
@@ -157,7 +170,7 @@
 
 
               <tr>
-                <th scope="row">4</th>
+                <th scope="row">5</th>
                 <td> Dia 3 ou 4</td>
                 <td> - - - </td>
                 <td> Utilizando o Google Colaboratory e ensinando redes Neurais com TensorFlow e Keras   </td>
@@ -169,7 +182,7 @@
               </tr>
 
               <tr>
-                <th scope="row">5</th>
+                <th scope="row">6</th>
                 <td> Dia 3 ou 4</td>
                 <td> - - - </td>
                 <td> De código para código: python, pandas e a inferência estatística no Direito   </td>
@@ -181,24 +194,12 @@
               </tr>
 
               <tr>
-                <th scope="row">6</th>
+                <th scope="row">7</th>
                 <td> Dia 3 ou 4</td>
                 <td> - - - </td>
                 <td> Sinapses - Inteligência artificial aplicada no TJRO   </td>
                 <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
                   Cleiton Augusto e Felipe Colen   </a>
-                </td>
-                <td>Auditório</td>
-                <td>À confirmar</td>
-              </tr>
-
-              <tr>
-                <th scope="row">7</th>
-                <td> Dia 3 ou 4</td>
-                <td> - - - </td>
-                <td> Python na Programação Competitiva   </td>
-                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
-                  Sylvio Tavares  </a>
                 </td>
                 <td>Auditório</td>
                 <td>À confirmar</td>
@@ -265,7 +266,7 @@
                 <td>Auditório</td>
                 <td>À confirmar</td>
               </tr>
-             
+
 
               <tr>
                 <th scope="row">13</th>
@@ -284,9 +285,8 @@
               </tbody>
             </table>
           </div>
-
-
         </div>
       </div>
     </div>
+  </div>
 </section>
