add palestras confirmadas

--- a/theme/templates/includes/schedule.html
+++ b/theme/templates/includes/schedule.html
@@ -147,8 +147,8 @@
                 <th scope="row">3</th>
                 <td> Dia 3</td>
                 <td> tarde </td>
-                <td> Python na Programação Competitiva   </td>
-                <td> <a target="_blank" href="www.sylviot.com">
+                <td> <b>Python na Programação Competitiva  </b> </td>
+                <td> <a target="_blank" href="http://www.sylviot.com">
                   Sylvio Tavares  </a>
                 </td>
                 <td>Auditório</td>
