add infos do hotel parceiro

--- a/theme/templates/home.html
+++ b/theme/templates/home.html
@@ -19,6 +19,8 @@
 
   {% include "includes/location.html" %}
 
+  {% include "includes/hoteis.html" %}
+
   {# {% include "includes/volunteers.html" %} #}
 
   {% include "includes/followus.html" %}
