--- a/theme/templates/includes/welcome.html
+++ b/theme/templates/includes/welcome.html
@@ -19,6 +19,7 @@
               <li><a class="page-scroll" href="#section-schedule">Programação</a></li>
               <li><a class="page-scroll" href="#section-partner">Apoiadores</a></li>
               <li><a class="page-scroll" href="#section-venue">Local</a></li>
+              <li><a class="page-scroll" href="#section-hoteis">Hospedagem</a></li>
               {# <li><a class="page-scroll" href="#section-team">Organização</a></li> #}
             </ul>
           </div>
