add confirmacao palestra

--- a/theme/templates/includes/schedule.html
+++ b/theme/templates/includes/schedule.html
@@ -147,6 +147,19 @@
                 <th scope="row">3</th>
                 <td> Dia 3</td>
                 <td> tarde </td>
+                <td> <b> Indústria 4.0: Como isso irá transformar nossas vidas? </b> </td>
+                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
+                  Maico Moreira </a>
+                </td>
+                <td>Auditório</td>
+                <td class="text-success "><b>Confirmada</b></td>
+              </tr>
+
+
+              <tr>
+                <th scope="row">4</th>
+                <td> Dia 3</td>
+                <td> tarde </td>
                 <td> <b>Python na Programação Competitiva  </b> </td>
                 <td> <a target="_blank" href="http://www.sylviot.com">
                   Sylvio Tavares  </a>
@@ -157,7 +170,20 @@
 
 
               <tr>
-                <th scope="row">4</th>
+                <th scope="row">9</th>
+                <td> Dia 4</td>
+                <td> manhã </td>
+                <td> <b>Python para todos os dispositivos! </b>  </td>
+                <td> <a target="_blank" href="http://www.miguelzamberlan.com.br">
+                  Miguel Zamberlan  </a>
+                </td>
+                <td>Auditório</td>
+                <td class="text-success "><b>Confirmada</b></td>
+              </tr>
+
+
+              <tr>
+                <th scope="row">5</th>
                 <td> Dia 4</td>
                 <td> tarde </td>
                 <td> <b>Data scientist: The sexiest job that you've likely never heard of  </b> </td>
@@ -168,18 +194,6 @@
                 <td class="text-success "><b>Confirmada</b></td>
               </tr>
 
-
-              <tr>
-                <th scope="row">5</th>
-                <td> Dia 3 ou 4</td>
-                <td> - - - </td>
-                <td> Utilizando o Google Colaboratory e ensinando redes Neurais com TensorFlow e Keras   </td>
-                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
-                  Rousseau Lobo Braga  </a>
-                </td>
-                <td>Auditório</td>
-                <td>À confirmar</td>
-              </tr>
 
               <tr>
                 <th scope="row">6</th>
@@ -218,18 +232,6 @@
                 <td>À confirmar</td>
               </tr>
 
-
-              <tr>
-                <th scope="row">9</th>
-                <td> Dia 3 ou 4</td>
-                <td> - - - </td>
-                <td> Python para todos os dispositivos!   </td>
-                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
-                  Miguel Zamberlan  </a>
-                </td>
-                <td>Auditório</td>
-                <td>À confirmar</td>
-              </tr>
 
               <tr>
                 <th scope="row">10</th>
