add confirmacao palestra e ajuste de horarios

--- a/theme/templates/includes/schedule.html
+++ b/theme/templates/includes/schedule.html
@@ -45,26 +45,26 @@
             </tr>
             <tr>
               <th scope="row">3</th>
-              <td>9h - 10h15 </td>
-              <td>Keynote </td>
+              <td>9h - 10h </td>
+              <td>Keynote - Renzo</td>
               <th scope="row">4</th>
-              <td>9h - 10h15 </td>
-              <td>Keynote </td>
+              <td>9h - 10h </td>
+              <td>Keynote - Eduardo</td>
             </tr>
             <tr>
               <th scope="row">3</th>
-              <td>10h15 - 10h45 </td>
+              <td>10h - 10h30 </td>
               <td>Coffee break </td>
               <th scope="row">4</th>
-              <td>10h15 - 10h45 </td>
+              <td>10h - 10h30 </td>
               <td>Coffee break </td>
             </tr>
             <tr>
               <th scope="row">3</th>
-              <td>10h45 - 12h </td>
+              <td>10h30 - 12h30 </td>
               <td>Continuação e encerramento manhã </td>
               <th scope="row">4</th>
-              <td>10h45 - 12h  </td>
+              <td>10h30 - 12h30  </td>
               <td>Continuação e encerramento manhã </td>
             </tr>
             <tr>
@@ -120,7 +120,7 @@
               <tr>
                 <th scope="row">1</th>
                 <td> Dia 3</td>
-                <td> manhã </td>
+                <td> 10h30 </td>
                 <td> <b>Redes neuronais do zero com python  </b> </td>
                 <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
                   Clayton Guimarães C. Santos  </a>
@@ -133,7 +133,20 @@
               <tr>
                 <th scope="row">2</th>
                 <td> Dia 3</td>
-                <td> tarde </td>
+                <td> 11h30 </td>
+                <td> <b>Como deixar seu código mais elegante com SOLID </b> </td>
+                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
+                  Janderson Thomaz  </a>
+                </td>
+                <td>Auditório</td>
+                <td class="text-success "><b>Confirmada</b></td>
+              </tr>
+
+
+              <tr>
+                <th scope="row">3</th>
+                <td> Dia 3</td>
+                <td> 14h30 </td>
                 <td> <b> Classe não é tabela: como está o paradigma da Orientação à Objetos </b> </td>
                 <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
                   José Avani das Chagas Júnior </a>
@@ -144,22 +157,9 @@
 
 
               <tr>
-                <th scope="row">3</th>
-                <td> Dia 3</td>
-                <td> tarde </td>
-                <td> <b> Indústria 4.0: Como isso irá transformar nossas vidas? </b> </td>
-                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
-                  Maico Moreira </a>
-                </td>
-                <td>Auditório</td>
-                <td class="text-success "><b>Confirmada</b></td>
-              </tr>
-
-
-              <tr>
                 <th scope="row">4</th>
                 <td> Dia 3</td>
-                <td> tarde </td>
+                <td> 16h </td>
                 <td> <b>Python na Programação Competitiva  </b> </td>
                 <td> <a target="_blank" href="http://www.sylviot.com">
                   Sylvio Tavares  </a>
@@ -172,7 +172,20 @@
               <tr>
                 <th scope="row">5</th>
                 <td> Dia 3</td>
-                <td> tarde </td>
+                <td> 17h </td>
+                <td> <b> Indústria 4.0: Como isso irá transformar nossas vidas? </b> </td>
+                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
+                  Maico Moreira </a>
+                </td>
+                <td>Auditório</td>
+                <td class="text-success "><b>Confirmada</b></td>
+              </tr>
+
+
+              <tr>
+                <th scope="row">6</th>
+                <td> Dia 3</td>
+                <td> 14h30 - 18h </td>
                 <td> <b> [Tutorial] Conceituando e criando uma RESTful API com Django e Django Rest Framework  </b> </td>
                 <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
                   Riverfount  </a>
@@ -183,9 +196,9 @@
 
 
               <tr>
-                <th scope="row">6</th>
+                <th scope="row">7</th>
                 <td> Dia 4</td>
-                <td> manhã </td>
+                <td> 10h30 </td>
                 <td> <b>Python para todos os dispositivos! </b>  </td>
                 <td> <a target="_blank" href="http://www.miguelzamberlan.com.br">
                   Miguel Zamberlan  </a>
@@ -196,9 +209,9 @@
 
 
               <tr>
-                <th scope="row">7</th>
+                <th scope="row">8</th>
                 <td> Dia 4</td>
-                <td> manhã </td>
+                <td> 11h30 </td>
                 <td> <b>Filósofo e Pythonista: Como a programação foi capaz de revolucionar a minha forma de trabalhar  </b> </td>
                 <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
                   Riverfount   </a>
@@ -209,9 +222,9 @@
 
 
               <tr>
-                <th scope="row">8</th>
+                <th scope="row">9</th>
                 <td> Dia 4</td>
-                <td> tarde </td>
+                <td> 14h30 </td>
                 <td> <b>Data scientist: The sexiest job that you've likely never heard of  </b> </td>
                 <td> <a target="_blank" href="https://www.rondonia.fiocruz.br/">
                   Moreno MS Rodrigues  </a>
@@ -222,24 +235,12 @@
 
 
               <tr>
-                <th scope="row">9</th>
+                <th scope="row">10</th>
                 <td> Dia 3 ou 4</td>
                 <td> - - - </td>
                 <td> De código para código: python, pandas e a inferência estatística no Direito   </td>
                 <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
                   Edson Pinto   </a>
-                </td>
-                <td>Auditório</td>
-                <td>À confirmar</td>
-              </tr>
-
-              <tr>
-                <th scope="row">10</th>
-                <td> Dia 3 ou 4</td>
-                <td> - - - </td>
-                <td> Sinapses - Inteligência artificial aplicada no TJRO   </td>
-                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
-                  Cleiton Augusto e Felipe Colen   </a>
                 </td>
                 <td>Auditório</td>
                 <td>À confirmar</td>
@@ -283,6 +284,18 @@
                 <td>À confirmar</td>
               </tr>
 
+
+              <tr>
+                <th scope="row">14</th>
+                <td> Dia 3 ou 4</td>
+                <td> - - - </td>
+                <td> Sinapses - Inteligência artificial aplicada no TJRO   </td>
+                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
+                  Cleiton Augusto e Felipe Colen   </a>
+                </td>
+                <td>Auditório</td>
+                <td>À confirmar</td>
+              </tr>
 
 
               </tbody>
