add links para as comunidades pyro r pynorte

--- a/theme/templates/includes/about.html
+++ b/theme/templates/includes/about.html
@@ -33,6 +33,18 @@
           <a href="https://python.org.br/cdc/" target="_blank">
             <button type="button" class="btn btn-success btn-lg">Código de Conduta</button>
           </a>
+
+            <br />
+          <br />
+          <a href="https://t.me/pythonPyRO" target="_blank">
+            <button type="button" class="btn btn-primary btn-lg "> <i class="fa  fa-telegram"></i> PyRO </button>
+          </a>
+
+            <a href="https://t.me/pynorte" target="_blank">
+            <button type="button" class="btn btn-primary btn-lg"> <i class="fa  fa-telegram"></i> PyNorte</button>
+          </a>
+
+
         </div>
       </div>
     </div>
