--- a/theme/templates/includes/papers.html
+++ b/theme/templates/includes/papers.html
@@ -12,7 +12,7 @@
           <div class="col-sm-12">
             <h2 class="text-center">
               <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
-                Envie sua proposta!
+                  <strike>Envie sua proposta!</strike> Prazo encerrado
               </a>
             </h2>
           </div>
