--- a/theme/templates/includes/schedule.html
+++ b/theme/templates/includes/schedule.html
@@ -73,7 +73,7 @@
               <td>Palestras / Tutoriais </td>
               <th scope="row">4</th>
               <td>14h30 - 16h </td>
-              <td>Palestras / Tutoriais </td>
+                <td>Palestras / <strike>Tutoriais</strike> </td>
             </tr>
             <tr>
               <th scope="row">3</th>
@@ -89,7 +89,7 @@
               <td>Palestras / Tutoriais </td>
               <th scope="row">4</th>
               <td>16h30 - 18h </td>
-              <td>Sprints </td>
+              <td> <strike>Sprints</strike> / Palestras / Encerramento </td>
             </tr>
 
             </tbody>
@@ -260,31 +260,44 @@
               <tr>
                 <th scope="row">12</th>
                 <td> Dia 4</td>
-                <td> - - - </td>
-                <td>Criando um chatbot com Python e Dialogflow (Google)</td>
+                <td> 16h30 - 17h15 </td>
+                <td> <b> PyCon Amazônia Episódio III - Um letreiro Star Wars com Angular </b> </td>
                 <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
-                  Felipe Colen  </a>
+                  Felipe Campos </a>
                 </td>
                 <td>Auditório</td>
-                <td>À confirmar</td>
+                <td class="text-success "><b>Confirmada</b></td>
               </tr>
 
 
               <tr>
                 <th scope="row">13</th>
-                <td> Dia 4</td>
                 <td> - - - </td>
-                <td> Sinapses - Inteligência artificial aplicada no TJRO   </td>
+                <td> - - - </td>
+                <td>Criando um chatbot com Python e Dialogflow (Google)</td>
                 <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
-                  Cleiton Augusto e Felipe Colen   </a>
+                  Felipe Colen  </a>
                 </td>
-                <td>Auditório</td>
-                <td>À confirmar</td>
+                <td>- - -</td>
+                <td class="text-danger "><b>Cancelada</b></td>
               </tr>
 
 
               <tr>
                 <th scope="row">14</th>
+                <td> - - - </td>
+                <td> - - - </td>
+                <td> Sinapses - Inteligência artificial aplicada no TJRO   </td>
+                <td> <a target="_blank" href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/">
+                  Cleiton Augusto e Felipe Colen   </a>
+                </td>
+                <td>- - -</td>
+                <td class="text-danger "><b>Cancelada</b></td>
+              </tr>
+
+
+              <tr>
+                <th scope="row">15</th>
                 <td> - - - </td>
                 <td> - - - </td>
                 <td> Utilizando o Google Colaboratory e ensinando redes Neurais com TensorFlow e Keras   </td>
@@ -297,7 +310,7 @@
 
 
               <tr>
-                <th scope="row">15</th>
+                <th scope="row">16</th>
                 <td> - - - </td>
                 <td> - - - </td>
                 <td> Python e a Bolsa de Valores   </td>
@@ -310,7 +323,7 @@
 
 
               <tr>
-                <th scope="row">16</th>
+                <th scope="row">17</th>
                 <td> - - - </td>
                 <td> - - - </td>
                 <td> Data scientist: The sexiest job that you've likely never heard of </td>
