--- a/theme/templates/includes/sponsors.html
+++ b/theme/templates/includes/sponsors.html
@@ -37,6 +37,12 @@
         </a>
       </div>
 
+      <div class="col-lg-4 col-md-4 col-sm-12 section-margin">
+        <a href="http://carlosalessandre.com.br/ca_portfolio/selo-pycon-amazonia-2019/" target="_blank">
+          <img src="{{ SITEURL }}/images/logo_ca.jpg" alt="Carlos Alessandre - Designer Digital" >
+        </a>
+      </div>
+
 
     </div>
   </div>
