--- a/theme/templates/home.html
+++ b/theme/templates/home.html
@@ -11,7 +11,7 @@
 
   {% include "includes/speakers.html" %}
 
-  {% include "includes/papers.html" %}
+{#  {% include "includes/papers.html" %}#}
 
   {% include "includes/schedule.html" %}
 
@@ -19,9 +19,11 @@
 
   {% include "includes/location.html" %}
 
-  {% include "includes/hoteis.html" %}
+{#  {% include "includes/hoteis.html" %}#}
 
   {# {% include "includes/volunteers.html" %} #}
+
+    {% include "includes/relatorio.html" %}
 
   {% include "includes/followus.html" %}
 {% endblock %}
