--- a/theme/templates/includes/hoteis.html
+++ b/theme/templates/includes/hoteis.html
@@ -4,7 +4,7 @@
             <div class="col-md-12">
                 <div class="section-title">
                     <h1>HOSPEDAGEM</h1>
-                    <p>Parceria com hotel próximo ao local do evento</p>
+{#                    <p>Parceria com hotel próximo ao local do evento</p>#}
                 </div>
             </div>
         </div>
@@ -15,15 +15,15 @@
                     <img src="{{ SITEURL }}/images/rota_hotel_ifroZN.png" alt="Rota Hotel IFRO ZN" style=" width: 25%">
                     <br />
                     <br /> Hotel Flamboyant
-                    <br /> Apto. Single R$ 110,00
-                    <br /> Apto. Double R$ 160,00
-                    <br /> Apto. Triplo R$ 200,00
+{#                    <br /> Apto. Single R$ 110,00#}
+{#                    <br /> Apto. Double R$ 160,00#}
+{#                    <br /> Apto. Triplo R$ 200,00#}
                     <br /><a href="www.hotelflamboyant-ro.com.br" target="_blank">www.hotelflamboyant-ro.com.br</a>
-                    <br />reservas@hotelflamboyant-ro.com.br / flamboyantsuitehotel@gmail.com
-                    <br />(69) 3225-2102 / 3222-5896
-                    <br />
-                    <a href="{{ SITEURL }}/images/hotel_pycon_desconto.pdf" target="_blank">Proposta de preços</a> /
-                    <a href="https://goo.gl/maps/V749rKnrrb9P4QeR8" target="_blank">Link do Google Maps</a>
+{#                    <br />reservas@hotelflamboyant-ro.com.br / flamboyantsuitehotel@gmail.com#}
+{#                    <br />(69) 3225-2102 / 3222-5896#}
+{#                    <br />#}
+{#                    <a href="{{ SITEURL }}/images/hotel_pycon_desconto.pdf" target="_blank">Proposta de preços</a> /#}
+{#                    <a href="https://goo.gl/maps/V749rKnrrb9P4QeR8" target="_blank">Link do Google Maps</a>#}
                 </h2>
             </div>
         </div>
