--- a/theme/templates/includes/welcome.html
+++ b/theme/templates/includes/welcome.html
@@ -29,21 +29,31 @@
     <div class="jumbotron text-center">
       <div style="width: 100%; height: 100%; background: rgba(14,80,85, 0.75);"></div>
       <div class="content">
-        <div class="event-date"><b>3 e 4 de AGOSTO, Porto Velho/RO</b></div>
+        <div class="event-date"><b>Realizada nos dias 3 e 4 de agosto, Porto Velho/RO</b></div>
         <h1>PYCON AMAZÔNIA 2019</h1>
         <p class="lead"><b>3ª Conferência da Comunidade Python no Norte do Brasil</b></p>
-        <a href="https://www.eventbrite.com.br/e/3a-pycon-amazonia-porto-velhoro-tickets-62957486537" target="_blank">
-          <button type="button" class="btn btn-success btn-lg" disabled>Quero me inscrever agora!</button>
-        </a>
+        <p class="lead">
+          <b>
+            <b style="color: yellowgreen">90</b> pessoas muito legais, de 7 estados, compareceram ao evento!!!
+            <br />Representando a região norte recebemos: Acre, Amazonas, Rondônia e Roraima.
+            <br />Do restante do Brasilzão: Mato Grosso, São Paulo e Paraná.
+         </b>
+        </p>
 
-        <br />
 
-        <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/" target="_blank">
-          <button type="button" class="btn btn-warning btn-lg" disabled>Quero palestrar!</button>
-        </a>
+{#        <a href="https://www.eventbrite.com.br/e/3a-pycon-amazonia-porto-velhoro-tickets-62957486537" target="_blank">#}
+{#          <button type="button" class="btn btn-success btn-lg" disabled>Quero me inscrever agora!</button>#}
+{#        </a>#}
+{##}
+{#        <br />#}
+{##}
+{#        <a href="https://speakerfight.com/events/3a-pycon-amazonia-2019-porto-velhoro/" target="_blank">#}
+{#          <button type="button" class="btn btn-warning btn-lg" disabled>Quero palestrar!</button>#}
+{#        </a>#}
+{##}
+{#        <a href="http://vaka.me/635040" target="_blank">#}
+{#          <button type="button" class="btn btn-primary btn-lg" disabled>Quero contribuir R$ !</button>#}
+{#        </a>#}
 
-        <a href="http://vaka.me/635040" target="_blank">
-          <button type="button" class="btn btn-primary btn-lg" disabled>Quero contribuir R$ !</button>
-        </a>
       </div>
     </div>
