--- a/theme/templates/includes/relatorio.html
+++ b/theme/templates/includes/relatorio.html
@@ -1,4 +1,4 @@
-    <section id="section-papers" class="section-wrapper pricing-section">
+    <section id="section-dados" class="section-wrapper pricing-section">
       <div class="container">
         <div class="row">
             <div class="col-md-12">
