--- a/theme/templates/includes/welcome.html
+++ b/theme/templates/includes/welcome.html
@@ -15,11 +15,12 @@
               <li class="hidden"><a href="#page-top"></a></li>
               <li><a class="page-scroll" href="#section-intro">Sobre</a></li>
               <li><a class="page-scroll" href="#section-speaker">Keynotes</a></li>
-              <li><a class="page-scroll" href="#section-papers">Call4Papers</a></li>
+{#              <li><a class="page-scroll" href="#section-papers">Call4Papers</a></li>#}
               <li><a class="page-scroll" href="#section-schedule">Programação</a></li>
               <li><a class="page-scroll" href="#section-partner">Apoiadores</a></li>
               <li><a class="page-scroll" href="#section-venue">Local</a></li>
-              <li><a class="page-scroll" href="#section-hoteis">Hospedagem</a></li>
+              <li><a class="page-scroll" href="#section-dados">Estatísticas</a></li>
+{#              <li><a class="page-scroll" href="#section-hoteis">Hospedagem</a></li>#}
               {# <li><a class="page-scroll" href="#section-team">Organização</a></li> #}
             </ul>
           </div>
